--- a/dashboard.html
+++ b/dashboard.html
@@ -5,33 +5,31 @@
   <title>Dashboard - Employee Management System</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body onload="displayEmployees()">
+<body onload="loadDashboard()">
   <header>
-    <h1>Employee Dashboard</h1>
+    <h1>Dashboard</h1>
   </header>
 
   <main>
-    <section class="dashboard-section">
-      <div class="button-bar">
-        <button class="button-primary" onclick="window.location.href='employee-form.html'">➕ Add Employee</button>
-        <button class="button-secondary" onclick="window.location.href='report-viewer.html'">📊 View Reports</button>
-      </div>
+    <button class="button-secondary" onclick="window.location.href='employee-form.html'">Add Employee</button>
+    <button class="button-secondary" onclick="window.location.href='report-viewer.html'">Reports</button>
 
-      <table id="employeeTable">
-        <thead>
-          <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Salary ($)</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </section>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Name</th>
+          <th>Salary</th>
+          <th>Missed Days</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="employeeTableBody"></tbody>
+    </table>
   </main>
 
   <footer>
-    <p class="footer-text">CS2043 – Deliverable 3 | Frontend by Chao Wang</p>
+    <p class="footer-text">Employee Management System</p>
   </footer>
 
   <script src="app.js"></script>
