--- a/employee-form.html
+++ b/employee-form.html
@@ -2,39 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Add Employee - Employee Management System</title>
+  <title>Employee Form - Employee Management System</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="loadEmployeeForm()">
   <header>
-    <h1>Add New Employee</h1>
+    <h1>Employee Form</h1>
   </header>
 
-  <main>
-    <section class="form-section">
-      <form id="employeeForm" onsubmit="addEmployee(); return false;">
-        <div class="form-group">
-          <label for="firstName">First Name:</label>
-          <input id="firstName" type="text" required>
-        </div>
-        <div class="form-group">
-          <label for="lastName">Last Name:</label>
-          <input id="lastName" type="text" required>
-        </div>
-        <div class="form-group">
-          <label for="salary">Salary ($):</label>
-          <input id="salary" type="number" required>
-        </div>
-        <div class="form-buttons">
-          <button class="button-primary" type="submit">Add Employee</button>
-          <button class="button-secondary" type="button" onclick="window.location.href='dashboard.html'">Back</button>
-        </div>
-      </form>
-    </section>
+  <main class="form-container">
+    <form id="employeeForm" onsubmit="saveEmployee(event)">
+      <div class="form-group">
+        <label for="firstName">First Name:</label>
+        <input type="text" id="firstName" name="firstName" required>
+      </div>
+      <div class="form-group">
+        <label for="lastName">Last Name:</label>
+        <input type="text" id="lastName" name="lastName" required>
+      </div>
+      <div class="form-group">
+        <label for="salary">Salary:</label>
+        <input type="number" id="salary" name="salary" required>
+      </div>
+      <div class="form-group">
+        <label for="missedDays">Missed Days:</label>
+        <input type="number" id="missedDays" name="missedDays">
+      </div>
+      <button type="submit" class="button-secondary">Save</button>
+      <button type="button" class="button-secondary" onclick="window.location.href='dashboard.html'">Cancel</button>
+    </form>
   </main>
 
   <footer>
-    <p class="footer-text">CS2043 – Deliverable 3 | Frontend by Chao Wang</p>
+    <p class="footer-text">Employee Management System</p>
   </footer>
 
   <script src="app.js"></script>
