--- a/report-viewer.html
+++ b/report-viewer.html
@@ -30,7 +30,7 @@
   </main>
 
   <footer>
-    <p class="footer-text">CS2043 – Deliverable 4 | Frontend by Chao Wang</p>
+    <p class="footer-text">Employee Management System</p>
   </footer>
 
   <script src="app.js"></script>
