--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Login - Employee Management System</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Login - Employee Management System</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body onload="initLogin()">
-  <header>
-    <h1>Employee Management System</h1>
-  </header>
+<body onload="initApp()">
+    <header>
+        <h1>Employee Management System</h1>
+    </header>
 
-  <main class="login-container">
-    <form id="loginForm" onsubmit="return handleLogin(event)">
-      <h2>Sign In</h2>
-      <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" required>
-      </div>
-      <button type="submit" class="button-secondary">Login</button>
-      <p id="loginError" class="error-text"></p>
-    </form>
-  </main>
+    <main class="login-container">
+        <form id="loginForm" onsubmit="return handleLogin(event)">
+            <h2>Sign In</h2>
+            <div class="form-group">
+                <label for="username">Username (Email):</label>
+                <input type="email" id="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" required>
+            </div>
+            <button type="submit" class="button-secondary">Login</button>
+            <p id="loginError" class="error-text"></p>
+        </form>
+    </main>
 
-  <footer>
-    <p class="footer-text">CS2043 – Deliverable 4 | Frontend by Chao Wang</p>
-  </footer>
+    <footer>
+        <p class="footer-text">Employee Management System</p>
+    </footer>
 
-  <script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
