--- a/dashboard.html
+++ b/dashboard.html
@@ -1,37 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Dashboard - Employee Management System</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Dashboard - Employee Management System</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body onload="loadDashboard()">
-  <header>
-    <h1>Dashboard</h1>
-  </header>
+    <header>
+        <h1 id="dashboardTitle">Dashboard</h1>
+        <button id="logoutButton" class="button-secondary" onclick="handleLogout()">Logout</button>
+    </header>
 
-  <main>
-    <button class="button-secondary" onclick="window.location.href='employee-form.html'">Add Employee</button>
-    <button class="button-secondary" onclick="window.location.href='report-viewer.html'">Reports</button>
+    <main>
+        <div id="adminView" style="display: none;">
+            <div class="dashboard-controls">
+                <button class="button-secondary" onclick="window.location.href='employee-form.html'">Add New Employee</button>
+                <button class="button-secondary" onclick="window.location.href='report-viewer.html'">Download Reports</button>
+            </div>
 
-    <table class="table">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Name</th>
-          <th>Salary</th>
-          <th>Missed Days</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody id="employeeTableBody"></tbody>
-    </table>
-  </main>
+            <section class="card-section">
+                <h2>Pending Leave Requests</h2>
+                <div id="leaveRequestContainer" class="table-container">
+                    <table class="table" id="leaveTable">
+                        <thead>
+                            <tr>
+                                <th>Employee</th>
+                                <th>Type</th>
+                                <th>Date Range</th>
+                                <th>Reason</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody id="leaveTableBody">
+                            </tbody>
+                    </table>
+                </div>
+            </section>
 
-  <footer>
-    <p class="footer-text">Employee Management System</p>
-  </footer>
+            <section class="card-section">
+                <h2>All Employees</h2>
+                <div class="table-container">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Name</th>
+                                <th>Email</th>
+                                <th>Salary</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody id="employeeTableBody">
+                            </tbody>
+                    </table>
+                </div>
+            </section>
+        </div>
 
-  <script src="app.js"></script>
+        <div id="employeeView" style="display: none;">
+            <button class="button-secondary" onclick="window.location.href='leave-request-form.html'">Submit New Leave Request</button>
+            
+            <section class="card-section">
+                <h2>My Leave Status</h2>
+                <div class="table-container">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Type</th>
+                                <th>Start Date</th>
+                                <th>End Date</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody id="myLeaveTableBody">
+                            </tbody>
+                    </table>
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <footer>
+        <p class="footer-text">Employee Management System</p>
+    </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
